# step-python

./: .env  .env.prod  Dockerfile  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/biz/: ai.py  hero.py  tool.py
app/configs/: config.py
app/data/: agent.py  ai.py  db.py  hero.py
app/models/: hero.py
app/routers/: ai.py  hero.py
